tests222/tests2/test354.out
lli: <stdin>:1:1: error: expected top-level entity
line 19: type mismatch
^
